--- a/src/RgDevBot/RgDevBot.csproj
+++ b/src/RgDevBot/RgDevBot.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="NLog" Version="4.7.7" />
     <PackageReference Include="Telegram.Bot" Version="10.4.0" />
   </ItemGroup>
 
