--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     restart: always
     volumes:
       - "./sent.json:/app/sent.json" 
+    env_file: ./settings.env
     environment:
       - TZ=Europe/Moscow
     logging:
