--- a/src/RgDevBot/RgDevBot.csproj
+++ b/src/RgDevBot/RgDevBot.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NLog" Version="4.7.7" />
     <PackageReference Include="Telegram.Bot" Version="10.4.0" />
+    <PackageReference Include="HttpToSocks5Proxy" Version="1.4.0" />
   </ItemGroup>
 
 </Project>
